
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int sin_family; int sin_port; TYPE_1__ sin_addr; } ;
struct sockaddr {int dummy; } ;
struct hostent {int dummy; } ;


 int AF_INET ;
 int SOCK_STREAM ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 int htons (int) ;
 int inet_addr (char*) ;
 int socket (int ,int ,int ) ;

int openSocket(struct sockaddr_in *si, char *hostIPaddr)
{
    int port=25, sd, rt ;
    long li ;
    struct hostent *he;

    si->sin_addr.s_addr = inet_addr(hostIPaddr);
    si->sin_family = AF_INET;
    si->sin_port = htons (port);
    sd = socket (si->sin_family, SOCK_STREAM, 0);
    if (sd == -1) return (-1);

    rt = connect(sd,(struct sockaddr *)si,sizeof(struct sockaddr_in));
    if ( rt < 0 ) {
       close(sd);
       return(-1);
    }

    return(sd) ;
}
