; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_19571.c_openSocket.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_19571.c_openSocket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_in = type { i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.hostent = type { i32 }
%struct.sockaddr = type { i32 }

@AF_INET = common dso_local global i32 0, align 4
@SOCK_STREAM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @openSocket(%struct.sockaddr_in* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sockaddr_in*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca %struct.hostent*, align 8
  store %struct.sockaddr_in* %0, %struct.sockaddr_in** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 25, i32* %6, align 4
  %11 = load i8*, i8** %5, align 8
  %12 = call i32 @inet_addr(i8* %11)
  %13 = load %struct.sockaddr_in*, %struct.sockaddr_in** %4, align 8
  %14 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %13, i32 0, i32 2
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  store i32 %12, i32* %15, align 4
  %16 = load i32, i32* @AF_INET, align 4
  %17 = load %struct.sockaddr_in*, %struct.sockaddr_in** %4, align 8
  %18 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 4
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @htons(i32 %19)
  %21 = load %struct.sockaddr_in*, %struct.sockaddr_in** %4, align 8
  %22 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %21, i32 0, i32 1
  store i32 %20, i32* %22, align 4
  %23 = load %struct.sockaddr_in*, %struct.sockaddr_in** %4, align 8
  %24 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @SOCK_STREAM, align 4
  %27 = call i32 @socket(i32 %25, i32 %26, i32 0)
  store i32 %27, i32* %7, align 4
  %28 = load i32, i32* %7, align 4
  %29 = icmp eq i32 %28, -1
  br i1 %29, label %30, label %31

30:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %43

31:                                               ; preds = %2
  %32 = load i32, i32* %7, align 4
  %33 = load %struct.sockaddr_in*, %struct.sockaddr_in** %4, align 8
  %34 = bitcast %struct.sockaddr_in* %33 to %struct.sockaddr*
  %35 = call i32 @connect(i32 %32, %struct.sockaddr* %34, i32 12)
  store i32 %35, i32* %8, align 4
  %36 = load i32, i32* %8, align 4
  %37 = icmp slt i32 %36, 0
  br i1 %37, label %38, label %41

38:                                               ; preds = %31
  %39 = load i32, i32* %7, align 4
  %40 = call i32 @close(i32 %39)
  store i32 -1, i32* %3, align 4
  br label %43

41:                                               ; preds = %31
  %42 = load i32, i32* %7, align 4
  store i32 %42, i32* %3, align 4
  br label %43

43:                                               ; preds = %41, %38, %30
  %44 = load i32, i32* %3, align 4
  ret i32 %44
}

declare dso_local i32 @inet_addr(i8*) #1

declare dso_local i32 @htons(i32) #1

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i32 @connect(i32, %struct.sockaddr*, i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
